fix alignment issues

--- a/resources/assets/public/scss/choices.scss
+++ b/resources/assets/public/scss/choices.scss
@@ -69,6 +69,9 @@ $inner-border-color: #ced4da;
       line-height: 1.6;
       font-size: 16px;
       padding: 6px 10px;
+      &:focus {
+        border: 1px solid $choices-highlight-color;
+      }
     }
     .#{$choices-selector}__button {
       background-image: $choices-icon-cross-inverse;
@@ -159,8 +162,11 @@ $inner-border-color: #ced4da;
       padding: 6px 0;
       margin: 0;
       box-shadow: none;
+      border-radius: 0;
       &:focus {
         box-shadow: none;
+        border: none;
+        outline: none;
       }
     }
     &:after {
